deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-book-store
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: online-book-store
          image: mpdafa/devops-getting-started
          ports:
            - containerPort: 80
