app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-book-store-service
spec:
  selector:
    app: online-book-store
  ports:
    - protocol: TCP
      port: 80 # The port you want to access the app on
      targetPort: 3000 # Match the containerPort in your Deployment
  type: LoadBalancer # Type can be ClusterIP, NodePort, or LoadBalancer
