app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-book-store
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: online-book-store
                port:
                  number: 80
